2008-01-31  Cody Russell  <bratsche@gnome.org>

	* gtk/gtkpaned.c (gtk_paned_set_position):
	Change queue_resize() to queue_draw(), and add a check for
	child2 != NULL in case someone calls this before there is
	a child packed in there.  (#144269 again)

2008-01-31  Sven Neumann  <sven@gimp.org>

	* gdk/directfb/gdkimage-directfb.c (_gdk_directfb_copy_to_image):
	applied patch from Denis Oliver Kropp <dok@directfb.org>.

2008-01-31  Sven Neumann  <sven@gimp.org>

	* gdk/directfb/gdkdisplay-directfb.c
	* gdk/directfb/gdkdrawable-directfb.c
	* gdk/directfb/gdkprivate-directfb.h
	* gdk/directfb/gdkwindow-directfb.c: applied patch from Denis
	Oliver Kropp <dok@directfb.org>. Fixes remaining warnings.

2008-01-31  Richard Hult  <richard@imendio.com>

	* gdk/quartz/GdkQuartzView.c: Another attempt at fixing focus
	issues with undecorated windows. Revert the change done on
	2008-01-25 and fix it by using the view's bounds instead. The
	bounds will always be up to date when setting up the tracking
	rect, so this should be more robust.

2008-01-30  Sven Neumann  <sven@gimp.org>

	* gdk/directfb/gdkdrawable-directfb.c
	* gdk/directfb/gdkwindow-directfb.c
	* gdk/directfb/gdkprivate-directfb.h: applied patch from Denis
	Oliver Kropp <dok@directfb.org>. Adds debug messages using
	DirectFB's debugging system

2008-01-30  Sven Neumann  <sven@gimp.org>

	* gdk/directfb/gdkdirectfb.h
	* gdk/directfb/gdkdisplay-directfb.c
	* gdk/directfb/gdkdrawable-directfb.c
	* gdk/directfb/gdkim-directfb.c
	* gdk/directfb/gdkimage-directfb.c
	* gdk/directfb/gdkinput-directfb.c
	* gdk/directfb/gdkmain-directfb.c
	* gdk/directfb/gdkpixmap-directfb.c
	* gdk/directfb/gdktestutils-directfb.c
	* gdk/directfb/gdkvisual-directfb.c
	* gdk/directfb/gdkwindow-directfb.c: applied patch from Denis
	Oliver Kropp <dok@directfb.org>. Fixes various warnings, some
	errors and has some cleanups.

2008-01-30  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkbuilderparser.c (parse_custom): use the right type for